--- a/MyPHP/Data/Tpl/error.html
+++ b/MyPHP/Data/Tpl/error.html
@@ -7,7 +7,7 @@
         *{margin:0px; padding:0px;}
         body{background: #F3F3F3;}
         ._prompt{
-            width:500px;margin:10px;
+            width:500px;margin:200px auto;
             background-color:#f9f9f9;
             height: auto;overflow:hidden;
         }
