--- a/MyPHP/Data/Tpl/halt.html
+++ b/MyPHP/Data/Tpl/halt.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
-		<title>KUAIXUE框架提示</title>
+		<title>MYPHP框架提示</title>
 		<style type="text/css">
 			div.main {
 				font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
@@ -89,7 +89,7 @@
 				<b>MYPHP开源框架</b>
 			</a>
 			(<?php echo MYPHP_VERSION ?>)
-			[ <a href="http://www.kuaixuewang.com" class='houdunwang' title="快学网"  target="_blank">快人一步</a>]
+			[ <a href="http://www.zukmb.com" class='houdunwang' title=""  target="_blank">能想的都要去做！</a>]
 		</div>
 	</body>
 </html>
